Made changes to cv and added new papers

--- a/NEW_RESUME/main.tex
+++ b/NEW_RESUME/main.tex
@@ -100,7 +100,7 @@ urlcolor=black]{hyperref}
 \begin{document}
 \begin{myresume}{Sharmila Duppala}
     {\small
-    email: \href{mailto:sduppala@umd.edu}{\textit{sduppala@umd.edu}}\hfill \href{https://www.cs.umd.edu/~sduppala}{website:sharmila-duppala.com} \hfill Github: \href{https://github.com/trinity24}{@trinity24} \hfill Phone: +1 (516)-669-6750 }
+    email: \href{mailto:sduppala@umd.edu}{\textit{sduppala@umd.edu}}\hfill \href{https://trinity24.github.io/}{website:trinity24.github.io} \hfill Github: \href{https://github.com/trinity24}{@trinity24} \hfill Phone: +1 (202)-451-8473 }
 
 %%%%%%%%%%%%%%%
 %% EDUCATION %%
@@ -110,7 +110,7 @@ urlcolor=black]{hyperref}
 
 \firstentry{
     \href{http://www.umd.edu}{\textbf{University of Maryland}}, College Park, Maryland, USA \hfill \datestamp{2019}{08}{07}--Present\newline
-    Ph.D. in Theoretical Computer Science and Fairness in AI, \href{http://www.cs.umd.edu}{Department of Computer Science} \hfill 
+    M.S./Ph.D. in Computer Science, \href{http://www.cs.umd.edu}{Department of Computer Science} \hfill 
 }
 
 \entry{
@@ -120,7 +120,7 @@ urlcolor=black]{hyperref}
 
 \entry{
     \href{http://www.svnit.ac.in}{\textbf{National Institute of Technology Surat}}, Gujarat, India \hfill \datestamp{2012}{07}{20}--\datestamp{2016}{05}{15}\newline
-    B.Tech. (Hons.),  \href{http://cse.iitkgp.ac.in}{Department of Computer Engineering} \hfill 
+    B.Tech.,  \href{http://cse.iitkgp.ac.in}{Department of Computer Science and Engineering} \hfill 
 }
 
 %%%%%%%%%%%%%%%%%%
@@ -128,55 +128,81 @@ urlcolor=black]{hyperref}
 %%%%%%%%%%%%%%%%%%
 
 \section{\href{https://scholar.google.com/citations?user=l7VcIesAAAAJ&hl=en}{Publications}}{papers}
-\firstentry{{\textbf{{Fair labelled Clustering}}}
 
-Seyed Esmeili, Sharmila Duppala, Brian Brubach, John P. Dickerson
+
+\firstentry{{\textbf{{Concentration of Submodular Functions Under Negative Dependence}}}
+
+\textit{$^{abc}$Sharmila Duppala}, George Z. Li, Juan Luque, Aravind Srinivasan, Renata Valieva 
+
+\textit{Under submission at ITCS 2023}}
+
+
+\entry{{\textbf{{Probabilistic Proportionally Fair Matching }}}
+
+\textit{Sharmila Duppala}, Nathaniel Grammel, Juan Luque, Aravind Srinivasan 
+
+\textit{In preparation}}
+
+\entry{{\textbf{{Barter Exchange with Shared Item Valuations}}}
+
+ Juan Luque, \textit{Sharmila Duppala}, John P. Dickerson, Aravind Srinivasan 
+
+\textit{Under submission at NeurIPS 2023}}
+
+
+\entry{{\textbf{{Algorithms for online matching under random order with degree-dependent competitive ratios }}}
+
+\textit{Sharmila Duppala}, Pan Xu 
+
+\textit{In preparation}}
+
+
+\entry{{\textbf{{Group Fairness in Set Packing Problems}}}
+
+\textit{Sharmila Duppala}, Juan Luque, John P. Dickerson, Aravind Srinivasan 
+
+\textit{IJCAI 2023}}
+
+\entry{{\textbf{Rawlsian Fairness in Online Bipartite Matching:Two-sided, Group, and Individual}}
+
+{Seyed Esmaeili, \textit{Sharmila Duppala}, Vedant Nanda, John P. Dickerson, Aravind Srinivasan}
+
+\textit{AAAI 2023} }
+
+    \entry{
+       {\textbf{Online minimum matching with uniform metric and random arrivals }}
+        
+       $^{abc}$\textit{ Sharmila Duppala}, Karthik Sankararaman, Pan Xu
+        
+        \textit{Operations Research Letters 2022}
+    }
+    
+\entry{{\textbf{{Fair labelled Clustering}}}
+
+Seyed Esmaeili, \textit{Sharmila Duppala}, Brian Brubach, John P. Dickerson
 
 \textit{KDD 2022} }
 
-    \entry{
-        \href{https://dl.acm.org/doi/pdf/10.1145/3323165.3323209}{\textbf{Data Races and the Discrete Resource-time Tradeoff Problem with Resource Reuse over Paths}}
-        
-        Rathish Das, Shih-Yu Tsai, Sharmila Duppala, Jason Lynch, Ester Arkin, Rezaul Chowdhury, Joseph Mitchell and Steven Skiena
-        
-        \textit{SPAA 2019}
-    }
 
     \entry{
         \href{https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9359209}{\resizebox{\linewidth}{!}{\textbf{Improved MapReduce Load Balancing through Distribution-Dependent Hash Function Optimization}}}
         
-        $^{abc}$ Zafar Ahmad, Sharmila Duppala, Rezaul Chowdhury, Steven Skiena
+        $^{abc}$ Zafar Ahmad, \textit{Sharmila Duppala}, Rezaul Chowdhury, Steven Skiena
         
         \textit{ICPADS 2020}
     }
 
 
+
+
     \entry{
-       {\textbf{Online minimum matching with uniform metric and random arrivals }}
+        \href{https://dl.acm.org/doi/pdf/10.1145/3323165.3323209}{\textbf{Data Races and the Discrete Resource-time Tradeoff Problem with Resource Reuse over Paths}}
         
-       $^{abc}$ Sharmila Duppala, Karthik Sankararaman, Pan Xu
-        
-        \textit{Operations Research Letters 2022}
+         {Rathish Das, Shih-Yu Tsai, \textit{Sharmila Duppala}, Jason Lynch, Ester Arkin, Rezaul Chowdhury, Joseph Mitchell, Steven Skiena}
+         
+        \textit{SPAA 2019}
     }
-    
 
-\entry{{\textbf{Rawlsian Fairness in Online Bipartite Matching:Two-sided, Group, and Individual}}
-
-{Seyed Esmeili, Sharmila Duppala, Vedant Nanda, John P. Dickerson, Aravind Srinivasan}
-
-\textit{AAMAS 2022 (Extended abstract)}}
-
-\entry{{\textbf{{Group Fairness in Set Packing Problems}}}
-
-Sharmila Duppala, Juan Luque, John P. Dickerson, Aravind Srinivasan 
-
-\textit{Under Submission at NeurIPS 2022}}
-
-\entry{{\textbf{{Algorithms for online matching under random order with degree-dependent competitive ratios }}}
-
-Sharmila Duppala, Pan Xu 
-
-\textit{Under Submission at NeurIPS 2022}}
 
     
 %%%%%%%%%%%%%%%%%%%%%%%%%
@@ -186,16 +212,22 @@ Sharmila Duppala, Pan Xu
 \section{Research \newline Experience}{research}
 \firstentry{
     \textbf{Ph.D. Student, \href{http://www.cs.umd.edu/}{University of Maryland, College Park}} \hfill \datestamp{2019}{08}{07}--Present \newline
-    {\textit{ Algorithmic Fairness and Stochastic Models for} \hfill Prof. John Dickerson \newline \textit{Combinatorial Optimization}} \hfill {Prof. Aravind Srinivasan}
+    {\textit{ Algorithmic Fairness and Stochastic Models for} \hfill Prof. John P. Dickerson \newline \textit{Combinatorial Optimization}} \hfill {Prof. Aravind Srinivasan}
     
-    Worked on formulating notions of fairness, translating them into rigorous mathematical objects, and incorporating them in classical algorithmic problems. Specifically,  fairness in hypergraph matching, online matching, maximum coverage, clustering and kidney exchange markets and the interplay of fairness and stochasticity, with emphasis on how the latter can ensure socially fair algorithmic solutions.}
+    Worked on formulating notions of fairness, translating them into rigorous mathematical objects, and incorporating them in classical algorithmic problems. Specifically,  fairness in hypergraph matching, online matching, clustering and kidney exchange markets and the role of stochasticity in obtaining fairness, with emphasis on how the latter can ensure socially fair algorithmic solutions.}
 
 \entry{
     \textbf{Masters Thesis , Stony Brook University} \hfill \datestamp{2017}{07}{15}--\datestamp{2019}{05}{15} \newline
-    {\textit{Optimizating two systems employing reducers}} \hfill {Prof. Rezaul Chowdhury} 
+    {\textit{Optimizating two systems employing reducers}} \hfill {Prof. Rezaul A. Chowdhury} 
     
-    Designed approximation algorithms for the \emph{Space-Time Trade-off Problem} in parallel programs that can simultaneously optimize the memory utilization and the makespan of  series-parallel graphs and computational  Directed Acyclic Graphs (DAGs). 
+    Work on approximation algorithms for the \emph{Space-Time Trade-off Problem} that can simultaneously optimize the memory utilization and the makespan of  series-parallel graphs and computational  Directed Acyclic Graphs (DAGs) with applications in parallel algorithms. 
 }
+
+\entry{
+    \textbf{Applied Scientist Internship , Optum Labs} \hfill \datestamp{2017}{07}{15}--\datestamp{2019}{05}{15} \newline
+    {\textit{Clustering text documents (patient transcripts) with overlapping and partial labels}} \hfill {Dr. Carlos W. Morato}  
+}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
 %% INTERNSHIPS %%
@@ -207,7 +239,7 @@ Sharmila Duppala, Pan Xu
 
 \section{Key \newline Courses}{courses}
 \firstentry{
-    \textbf{Graduate Level:} Quantum Computing, Advanced Probability Theory, Mechanism Design for Social AI, Algorithmic Lowerbounds, Advanced Algorithms, Computational Geometry, Discrete Mathematics, Computer Vision, Operating Systems, Network Security 
+    \textbf{Graduate Level:} Quantum Computing, Modern Discrete Probability, Mechanism Design for Social AI, Algorithmic Lowerbounds, Advanced Algorithms, Computational Geometry, Discrete Mathematics, Computer Vision, Operating Systems, Network Security.
 }\\[-8pt]
 
 \entry{
@@ -220,17 +252,17 @@ Sharmila Duppala, Pan Xu
 
 \section{Positions of \newline Responsibility}{por}
 \firstentry{
-    \textbf{Graduate Teaching Assistant} \hfill \datestamp{2017}{07}{14}--Present \newline
-    Served as a Discussion Leader and responsible for teaching Object Oriented Programming, Analysis of Algorithms, Computer Systems and Discrete Structures during different semesters. 
+    \textbf{Graduate Teaching Assistant} \hfill \datestamp{2017}{07}{14}--May 2021 \newline
+    Served as a Discussion Leader and responsible for teaching Object Oriented Programming, Advanced Algorithms, Analysis of Algorithms, Computer Systems and Discrete Structures during different semesters. 
 }
 
 \entry{
-    \textbf{Organizer, CATS (Capital Area Theory Seminar)} \hfill \datestamp{2021}{08}{01}--\datestamp{2022}{05}{25} \newline
-    Responsible for organizing CS theory talks and inviting speakers.
+    \textbf{Organizer, CATS (Capital Area Theory Seminar)} \hfill \datestamp{2021}{08}{01}--\datestamp{2023}{05}{25} \newline
+    Responsible for co-organizing CS theory weekly seminar and hosting external speakers.
 }
 
 \entry{
-  \textbf{Curriculum Designer and Instructor, Girls Talk Math} \hfill \datestamp{2021}{08}{01}--\datestamp{2021}{06}{01} \newline
+  \textbf{Curriculum Designer and Instructor, Girls Talk Math} \hfill \datestamp{2021}{06}{01}--\datestamp{2021}{08}{01} \newline
     Responsible for designing curriculum on undergraduate mathematics topics like Group Theory, Network Theory and Quantitative Finance for high school students and conducting educational camps.
 }
 
@@ -238,27 +270,27 @@ Sharmila Duppala, Pan Xu
 %% KEY COURSE PROJECTS %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Key \newline Projects}{projects}
+% \section{Key \newline Projects}{projects}
 
-\firstentry{\textbf{Comparing the efficacy of different data-preprocessing techniques in fair classification, University of Maryland}}
- \hfill {Prof. Soheil Feizi} 
+% \firstentry{\textbf{Comparing the efficacy of different data-preprocessing techniques in fair classification, University of Maryland}}
+%  \hfill {Prof. Soheil Feizi} 
 
-{Compared the performance of recent data preprocessing techniques in fair classification (eg. Clustering) like data (reweighing techniques (RW), learning fairness representations (LFR), optimized pre-processing(OP) ) under the fairness metric "statistical parity" using open source toolkit AI Fairness 360 on standard data sets available. }
+% {Compared the performance of recent data preprocessing techniques in fair classification (eg. Clustering) like data (reweighing techniques (RW), learning fairness representations (LFR), optimized pre-processing(OP) ) under the fairness metric "statistical parity" using open source toolkit AI Fairness 360 on standard data sets available. }
 
-\entry{\textbf{Operating Systems, Stony Brook University}}
- \hfill {Prof. Michael Ferdman} 
-{Built a  pre-emptive, multi-tasking {Operating System} from scratch. Implemented demand-paging, copy-on-fork and auto-growing stack functionalities. Created a compatible standard library and bash-like shell to interact with the OS.}
+% \entry{\textbf{Operating Systems, Stony Brook University}}
+%  \hfill {Prof. Michael Ferdman} 
+% {Built a  pre-emptive, multi-tasking {Operating System} from scratch. Implemented demand-paging, copy-on-fork and auto-growing stack functionalities. Created a compatible standard library and bash-like shell to interact with the OS.}
 
-\entry{\textbf{Computational Geometry, Stony Brook University}}
-\hfill{Prof. Joseph Mitchell}{}
+% \entry{\textbf{Computational Geometry, Stony Brook University}}
+% \hfill{Prof. Joseph Mitchell}{}
 
-{ The alpha-fatness and chord-arc scores are different measures of the "niceness" of polygons. They may prove useful in developing quantitative measures by which electoral districts may be determined illegal. This project includes software for implementing these measures together with preliminary results on random polygons. }
+% { The alpha-fatness and chord-arc scores are different measures of the "niceness" of polygons. They may prove useful in developing quantitative measures by which electoral districts may be determined illegal. This project includes software for implementing these measures together with preliminary results on random polygons. }
 
 
-\entry{}{\textbf{Energy Consumption Prediction, Stony Brook University}}
- \hfill {Prof. Zhenhua Liu} 
+% \entry{}{\textbf{Energy Consumption Prediction, Stony Brook University}}
+%  \hfill {Prof. Zhenhua Liu} 
  
-{Predicting an year's electricity consumption using the electricity consumption of previous year, time series data at 15min interval for 365 days. Implemented SARIMA, SVM and LSTM models using PyTorch and compared the results for 10 homes. Also enhanced the predictions using smart meter data for various appliances of the same homes.}
+% {Predicting an year's electricity consumption using the electricity consumption of previous year, time series data at 15min interval for 365 days. Implemented SARIMA, SVM and LSTM models using PyTorch and compared the results for 10 homes. Also enhanced the predictions using smart meter data for various appliances of the same homes.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% TECHNICAL SKILLS %%
