--- a/_bib/2023-04-24-IJCAI.bib
+++ b/_bib/2023-04-24-IJCAI.bib
@@ -1,4 +1,4 @@
-title: Rawlsian Fairness in Online Bipartite Matching, Two-sided, Group and Individual
+title: Group Fairness in Set Packing Problems
 authors:
   - sduppala
   - juan
