--- a/_bib/2023-09-10-ProportionalMatching.bib
+++ b/_bib/2023-09-10-ProportionalMatching.bib
@@ -1,3 +1,4 @@
+---
 title: Concentration of Submodular Functions Under Negative Dependence
 authors:
   - sduppala
@@ -6,4 +7,6 @@ authors:
   - aravind
 
 extra:
-venue: In preparation 
+venue: In preparation
+arxiv: https://arxiv.org/abs/2309.05554
+--- 
