added new changes to paper bib

--- a/_bib/2023-09-10-Submodular.bib
+++ b/_bib/2023-09-10-Submodular.bib
@@ -1,3 +1,4 @@
+---
 title: Concentration of Submodular Functions Under Negative Dependence
 authors:
   - sduppala
@@ -8,3 +9,5 @@ authors:
 
 extra:
 venue: Under submission at ITCS 2023
+arxiv: https://arxiv.org/abs/2309.05554
+---
