--- a/_bib/2023-09-10-ProportionalMatching.bib
+++ b/_bib/2023-09-10-ProportionalMatching.bib
@@ -1,5 +1,5 @@
 ---
-title: Concentration of Submodular Functions Under Negative Dependence
+title: Probabilistic Proportionally Fair Matching
 authors:
   - sduppala
   - nateg
