added new changes

--- a/_bib/2023-04-24-IJCAI.bib
+++ b/_bib/2023-04-24-IJCAI.bib
@@ -1,3 +1,4 @@
+---
 title: Group Fairness in Set Packing Problems
 authors:
   - sduppala
@@ -7,3 +8,6 @@ authors:
 
 extra:
 venue: IJCAI 2023
+link: https://www.ijcai.org/proceedings/2023/0044.pdf
+
+---
