--- a/_bib/2023-09-10-Submodular.bib
+++ b/_bib/2023-09-10-Submodular.bib
@@ -9,5 +9,5 @@ authors:
 
 extra:
 venue: Under submission at ITCS 2023
-arxiv: https://arxiv.org/abs/2309.05554
+link: https://arxiv.org/abs/2309.05554
 ---
