--- a/NEW_RESUME/main.tex
+++ b/NEW_RESUME/main.tex
@@ -110,12 +110,12 @@ urlcolor=black]{hyperref}
 
 \firstentry{
     \href{http://www.umd.edu}{\textbf{University of Maryland}}, College Park, Maryland, USA \hfill \datestamp{2019}{08}{07}--Present\newline
-    M.S./Ph.D. in Computer Science, \href{http://www.cs.umd.edu}{Department of Computer Science} \hfill 
+    M.S. and Ph.D., \href{http://www.cs.umd.edu}{Department of Computer Science} \hfill 
 }
 
 \entry{
     \href{http://www.stonybrook.edu}{\textbf{Stony Brook University}}, New York, USA \hfill \datestamp{2017}{07}{20}--\datestamp{2019}{05}{15}\newline
-    M.S. (Thesis),  \href{http://cse.iitkgp.ac.in}{Department of Computer Science} \hfill
+    M.S. (Thesis track),  \href{http://cse.iitkgp.ac.in}{Department of Computer Science} \hfill
 }
 
 \entry{
@@ -127,34 +127,122 @@ urlcolor=black]{hyperref}
 %% PUBLICATIONS %%
 %%%%%%%%%%%%%%%%%%
 
+
+
+    
+%%%%%%%%%%%%%%%%%%%%%%%%%
+%% RESEARCH EXPERIENCE %%
+%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Research \newline Experience}{research}
+\firstentry{
+    \textbf{Ph.D. Student, \href{http://www.cs.umd.edu/}{University of Maryland, College Park}} \hfill \datestamp{2019}{08}{07}--Present \newline
+    {\textit{ Algorithmic Fairness, and } \hfill \textbf{Prof. John P. Dickerson, Prof. Aravind Srinivasan} \newline \textit{ Stochastic Models for Combinatorial Optimization}} 
+    }
+    
+    Worked on PAF (Probabilistically Approximately Fair) algorithms for combinatorial problems. Specifically designed and analyzed randomized algorithms to ensure fairness in various combinatorial problems like graph matching, set packing, set covering, and clustering problems with real-world applications. 
+
+    
+\entry{
+    \textbf{Masters Thesis , Stony Brook University} \hfill \datestamp{2017}{07}{15}--\datestamp{2019}{05}{15} \newline
+    {\textit{Memory and makespan tradeoff in parallel programs}} \hfill \textbf{Prof. Rezaul Chowdh
+ury}
+
+Worked on a resource allocation problem that arises in scheduling parallel programs. Specifically worked on designing bi-criteria algorithms for allocating memory to optimize work and makespan simultaneously. 
+    }
+    
+\section{Internship \newline Experience}{research}
+
+    % Worked on formulating notions of fairness, translating them into rigorous mathematical objects, and incorporating them in classical algorithmic problems. Specifically,  fairness in hypergraph matching, online matching, clustering and kidney exchange markets and the role of stochasticity in obtaining fairness, with emphasis on how the latter can ensure socially fair algorithmic solutions.}
+
+\firstentry{
+    \textbf{Applied Scientist Internship , Optum Labs} \hfill \datestamp{2023}{06}{03}--\datestamp{2023}{08}{15} \newline
+    {\textit{ Deep representation learning for  partially annotated } \hfill \textbf{Dr. Carlos W. Morato} \newline \textit{multi-label clustering of medical dialogues.}} 
+    
+    Designed and implemented a neural model for learning cluster representations for multi-labeled dialogue data. Also developed a scoring metric to map multi-label dialogue to uni-labeled segments of dialogue. 
+} 
+
+
+
+\entry{
+    \textbf{Summer Research Internship, New Jersey Institute of Technology} \hfill \datestamp{2023}{06}{03}--\datestamp{2023}{08}{15} \newline
+    {\textit{Online matching under random order arrivals.}} \hfill \textbf{Prof. Pan Xu}  
+} 
+
+    Worked on online bipartite matching problem with bounded degree on the offline vertices, specifically we design algorithms with degree-dependent competitive ratio. 
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%
+%% INTERNSHIPS %%
+%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%
+%% KEY COURSES %%
+%%%%%%%%%%%%%%%%%%
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% POSITIONS OF RESPONSIBILITY %%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{\href{https://scholar.google.com/citations?user=l7VcIesAAAAJ&hl=en}{Publications}}{papers}
 
 
-\firstentry{{\textbf{{Concentration of Submodular Functions Under Negative Dependence}}}
-
-\textit{$^{abc}$Sharmila Duppala}, George Z. Li, Juan Luque, Aravind Srinivasan, Renata Valieva 
-
-\textit{Under submission at ITCS 2023}}
 
 
-\entry{{\textbf{{Probabilistic Proportionally Fair Matching }}}
+\firstentry{{\textbf{{Robust Fair Clustering with Noisy Memberships}}}
 
-\textit{Sharmila Duppala}, Nathaniel Grammel, Juan Luque, Aravind Srinivasan 
+\textit{Under submission at ICML 2024}}
 
-\textit{In preparation}}
+\textit{Sharmila Duppala}, Seyed Esmaeili, Juan Luque, John Dickerson
+
+\entry{{\textbf{{Proportionally Fair Matching}}}
+
+\textit{Under submission at ICML 2024}}
+
+\textit{$^{abc}$Sharmila Duppala}, Nathaniel Grammel, Juan Luque, Aravind Srinivasan
+
+\entry{{\textbf{{Simultaneous Group and Individual Fairness in Set Covering Problems}}}
+
+\textit{$^{abc}$Sharmila Duppala}, Nathaniel Grammel, Aravind Srinivasan
+
+\textit{Under submission at ICML 2024}}
+
+% \entry{{\textbf{{Concentration of Submodular Functions Under Negative Dependence}}}
+
+% \textit{$^{abc}$Sharmila Duppala}, George Z. Li, Juan Luque, Aravind Srinivasan, Renata Valieva 
+
+% \textit{Under submission at ITCS 2023}}
+
 
 \entry{{\textbf{{Barter Exchange with Shared Item Valuations}}}
 
  Juan Luque, \textit{Sharmila Duppala}, John P. Dickerson, Aravind Srinivasan 
 
-\textit{Under submission at NeurIPS 2023}}
+\textit{TheWebConference (WWW) 2024}}
+
+% \entry{{\textbf{{Probabilistic Proportionally Fair Matching }}}
+
+% \textit{Sharmila Duppala}, Nathaniel Grammel, Juan Luque, Aravind Srinivasan 
+
+% \textit{In preparation}}
 
 
-\entry{{\textbf{{Algorithms for online matching under random order with degree-dependent competitive ratios }}}
 
-\textit{Sharmila Duppala}, Pan Xu 
 
-\textit{In preparation}}
+% \entry{{\textbf{{Robust Fair Clustering with Noisy Group Memberships}}}
+
+%  \textit{Sharmila Duppala}, Seyed Esmaeili
+
+% \textit{In preparation}}
+
+
+% \entry{{\textbf{{Algorithms for online matching under random order with degree-dependent competitive ratios }}}
+
+% \textit{Sharmila Duppala}, Pan Xu 
+
+% \textit{In preparation}}
 
 
 \entry{{\textbf{{Group Fairness in Set Packing Problems}}}
@@ -204,38 +292,33 @@ Seyed Esmaeili, \textit{Sharmila Duppala}, Brian Brubach, John P. Dickerson
     }
 
 
-    
-%%%%%%%%%%%%%%%%%%%%%%%%%
-%% RESEARCH EXPERIENCE %%
-%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Research \newline Experience}{research}
-\firstentry{
-    \textbf{Ph.D. Student, \href{http://www.cs.umd.edu/}{University of Maryland, College Park}} \hfill \datestamp{2019}{08}{07}--Present \newline
-    {\textit{ Algorithmic Fairness and Stochastic Models for} \hfill Prof. John P. Dickerson \newline \textit{Combinatorial Optimization}} \hfill {Prof. Aravind Srinivasan}
-    
-    Worked on formulating notions of fairness, translating them into rigorous mathematical objects, and incorporating them in classical algorithmic problems. Specifically,  fairness in hypergraph matching, online matching, clustering and kidney exchange markets and the role of stochasticity in obtaining fairness, with emphasis on how the latter can ensure socially fair algorithmic solutions.}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% KEY COURSE PROJECTS %%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\entry{
-    \textbf{Masters Thesis , Stony Brook University} \hfill \datestamp{2017}{07}{15}--\datestamp{2019}{05}{15} \newline
-    {\textit{Optimizating two systems employing reducers}} \hfill {Prof. Rezaul A. Chowdhury} 
-    
-    Work on approximation algorithms for the \emph{Space-Time Trade-off Problem} that can simultaneously optimize the memory utilization and the makespan of  series-parallel graphs and computational  Directed Acyclic Graphs (DAGs) with applications in parallel algorithms. 
-}
+\section{Key \newline Projects}{projects}
 
-\entry{
-    \textbf{Applied Scientist Internship , Optum Labs} \hfill \datestamp{2017}{07}{15}--\datestamp{2019}{05}{15} \newline
-    {\textit{Clustering text documents (patient transcripts) with overlapping and partial labels}} \hfill {Dr. Carlos W. Morato}  
-}
+% \firstentry{\textbf{Comparing the efficacy of different data-preprocessing techniques in fair classification, University of Maryland}}
+%  \hfill {Prof. Soheil Feizi} 
+
+% {Compared the performance of recent data preprocessing techniques in fair classification (eg. Clustering) like data (reweighing techniques (RW), learning fairness representations (LFR), optimized pre-processing(OP) ) under the fairness metric "statistical parity" using open source toolkit AI Fairness 360 on standard data sets available. }
+
+\firstentry{\textbf{Operating Systems, Stony Brook University}}
+ \hfill {Prof. Michael Ferdman} 
+{Built a  pre-emptive, multi-tasking {Operating System} from scratch. Implemented demand-paging, copy-on-fork and auto-growing stack functionalities. Created a compatible standard library and bash-like shell to interact with the kernal (OS).}
+
+\entry{\textbf{Computational Geometry, Stony Brook University}}
+\hfill{Prof. Joseph Mitchell}{}
+
+{ The alpha-fatness and chord-arc scores are different measures of the "niceness" of polygons. They may prove useful in developing quantitative measures by which electoral districts may be determined illegal. This project includes software for implementing these measures together with preliminary results on random polygons. }
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%
-%% INTERNSHIPS %%
-%%%%%%%%%%%%%%%%%%%%%%%%%
+\entry{}{\textbf{Energy Consumption Prediction, Stony Brook University}}
+ \hfill {Prof. Zhenhua Liu} 
+ 
+{Predicting an year's electricity consumption using the electricity consumption of previous year, time series data at 15min interval for 365 days. Implemented SARIMA, SVM and LSTM models using PyTorch and compared the results for 10 homes. Also enhanced the predictions using smart meter data for various appliances of the same homes.}
 
-%%%%%%%%%%%%%%%%%%
-%% KEY COURSES %%
-%%%%%%%%%%%%%%%%%%
 
 \section{Key \newline Courses}{courses}
 \firstentry{
@@ -243,69 +326,48 @@ Seyed Esmaeili, \textit{Sharmila Duppala}, Brian Brubach, John P. Dickerson
 }\\[-8pt]
 
 \entry{
-    \resizebox{\linewidth}{!}{\textbf{Data Science:} Deep Learning Theory, Advanced Numerical Optimization, Algorithms in Machine Learning}
+    \resizebox{\linewidth}{!}{\textbf{Data Science/ML:} Deep Learning Theory, Advanced Numerical Optimization, Algorithms in Machine Learning}
+}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% TECHNICAL SKILLS %%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Positions of \newline Responsibility}{por}
+
+\firstentry{
+\textbf{Program Committee Member-Reviewer; Sub-reviewer} 
+
+The WebConference 2024, ICLR 2023, SODA 2023, SODA 2019 
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% POSITIONS OF RESPONSIBILITY %%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% \entry{
+%     \textbf{Organizer, Algorithmic Fairness Reading Group} \hfill \datestamp{2023}{09}{01}-- \newline
+%     Responsible for organizing Fairness bi-weekly seminar internally within University of Maryland. 
+% }
 
-\section{Positions of \newline Responsibility}{por}
-\firstentry{
-    \textbf{Graduate Teaching Assistant} \hfill \datestamp{2017}{07}{14}--May 2021 \newline
-    Served as a Discussion Leader and responsible for teaching Object Oriented Programming, Advanced Algorithms, Analysis of Algorithms, Computer Systems and Discrete Structures during different semesters. 
+\entry{
+    \textbf{Organizer, Capital Area Theory Seminar and Algorithmic Fairness Seminar} \hfill \datestamp{2021}{08}{01}--Present \newline
+    Responsible for co-organizing CS theory weekly seminar  hosting external speakers and a reading group discussing the latest papers in fairness literature. 
 }
 
 \entry{
-    \textbf{Organizer, CATS (Capital Area Theory Seminar)} \hfill \datestamp{2021}{08}{01}--\datestamp{2023}{05}{25} \newline
-    Responsible for co-organizing CS theory weekly seminar and hosting external speakers.
+    \textbf{Graduate Teaching Assistant} \hfill \datestamp{2017}{07}{14}--Present \newline
+    Advanced Algorithms (Fall 2023), Analysis of Algorithms (Fall 2018), Computer Systems (Spring 2020) and Discrete Structures (Summer 2020)
 }
 
 \entry{
   \textbf{Curriculum Designer and Instructor, Girls Talk Math} \hfill \datestamp{2021}{06}{01}--\datestamp{2021}{08}{01} \newline
     Responsible for designing curriculum on undergraduate mathematics topics like Group Theory, Network Theory and Quantitative Finance for high school students and conducting educational camps.
 }
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% KEY COURSE PROJECTS %%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \section{Key \newline Projects}{projects}
-
-% \firstentry{\textbf{Comparing the efficacy of different data-preprocessing techniques in fair classification, University of Maryland}}
-%  \hfill {Prof. Soheil Feizi} 
-
-% {Compared the performance of recent data preprocessing techniques in fair classification (eg. Clustering) like data (reweighing techniques (RW), learning fairness representations (LFR), optimized pre-processing(OP) ) under the fairness metric "statistical parity" using open source toolkit AI Fairness 360 on standard data sets available. }
-
-% \entry{\textbf{Operating Systems, Stony Brook University}}
-%  \hfill {Prof. Michael Ferdman} 
-% {Built a  pre-emptive, multi-tasking {Operating System} from scratch. Implemented demand-paging, copy-on-fork and auto-growing stack functionalities. Created a compatible standard library and bash-like shell to interact with the OS.}
-
-% \entry{\textbf{Computational Geometry, Stony Brook University}}
-% \hfill{Prof. Joseph Mitchell}{}
-
-% { The alpha-fatness and chord-arc scores are different measures of the "niceness" of polygons. They may prove useful in developing quantitative measures by which electoral districts may be determined illegal. This project includes software for implementing these measures together with preliminary results on random polygons. }
-
-
-% \entry{}{\textbf{Energy Consumption Prediction, Stony Brook University}}
-%  \hfill {Prof. Zhenhua Liu} 
- 
-% {Predicting an year's electricity consumption using the electricity consumption of previous year, time series data at 15min interval for 365 days. Implemented SARIMA, SVM and LSTM models using PyTorch and compared the results for 10 homes. Also enhanced the predictions using smart meter data for various appliances of the same homes.}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% TECHNICAL SKILLS %%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \section{Technical Skills}{pls}
 \firstentry{  
 \textbf{Programming Languages:} C, C++, Java, Python, SQL, PL-SQL, MATLAB, Prolog, Qiskit 
 }\\[-24pt]
 
 \entry{ 
-\textbf{Platforms/Tools:} Linux, Windows, GDB, Eclipse, QEMU, Processing 
+\textbf{Platforms/Tools:} Linux, Pandas, Windows, GDB, Eclipse, QEMU, Processing 
 } 
 \entry{   
-\textbf{Libraries for Machine Learning:} PyTorch, Numpy, Keras, TensorFlow, Jupyter Notebook
+\textbf{Libraries for Machine Learning:} PyTorch, Numpy, TensorFlow, Jupyter Notebook, Hugging Face.
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -332,7 +394,7 @@ TCS (Theoretical Computer Science) Women Scholarship STOC-2019 }
 Prof. Aravind Srinivasan, University of Maryland, College Park \hfill email: \href{mailto: srin@cs.umd.edu}{\textit{srin@cs.umd.edu}}
 }
 \entry{
-Prof. John Dickerson, University of Maryland, College Park \hfill email: \href{mailto:johnd@umd.edu}{\textit{johnd@umd.edu}}
+Prof. John P. Dickerson, University of Maryland, College Park \hfill email: \href{mailto:johnd@umd.edu}{\textit{johnd@umd.edu}}
 }
 \entry{
 Prof. Rezaul Chowdhury, Stony Brook University \hfill email: \href{mailto:rezaul@cs.stonybrook.edu}{\textit{rezaul@cs.stonybrook.edu}}
